# devops-diploma-2025

./: .dockerignore  .editorconfig  .releaserc  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.github/actions/install-dependencies/: action.yml
.github/workflows/: test.yml
api/: models.py  serializers.py  urls.py  views.py
api/fixtures/: books.json
api/migrations/: 0001_initial.py
api/tests/: test_views.py
argo-helm/: values.yaml
bookcatalog/: settings.py  urls.py
books-catalog-chart/: Chart.yaml  values.yaml
books-catalog-chart/templates/: NOTES.txt  configMap.yaml  deployment.yaml  ingress.yaml  migration-job.yaml
envs/prod/: values.yaml
k8s/: clusterip.yml  deployment.yml  ingress.yml  nginx-single-pod.yml  nodeport.yml
k8s/postgres-helm/: values.yml
k8s/postgresql/: pvc.yml  service.yml  statefulset.yml
