[project]
name = "devops-diploma-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.3",
    "djangorestframework>=3.16.0",
    "environs>=14.2.0",
    "psycopg2-binary>=2.9.10",
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "bookcatalog.settings"
